# wasmruntime

./: Cargo.toml  Makefile  README.md
.github/workflows/: pull-request.yml
examples/: Makefile  hello.go  hello.gr  hello.js
src/: apifn.rs  apifn_ut.rs  cfg.rs  cfg_ut.rs  lib.rs  lib_ut.rs  main.rs
