[package]
name = "wasmruntime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde_json = { version = "1.0.145", features = ["indexmap"] }
wasi-common = "36.0.2"
wasmtime = "36.0.2"
wasmtime-wasi = "36.0.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
